<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreOrderActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/storeOrderView"
            android:translationX="150dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="119dp"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:text="@string/orderNumberView" />

            <Spinner
                android:id="@+id/orderSpinner"
                android:layout_width="302dp"
                android:layout_height="48dp" />

        </LinearLayout>

        <ListView
            android:id="@+id/storderListView"
            android:layout_width="match_parent"
            android:layout_height="322dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/orderTotalView" />

            <TextView
                android:id="@+id/orderPriceTextView"
                android:layout_width="322dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelOrderButton" />

        </LinearLayout>

        <Button
            android:id="@+id/backMainButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backButtonName" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>