<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NYActivity">

    <LinearLayout
        android:layout_width="389dp"
        android:layout_height="662dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="383dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EF2A2A"
                android:text="@string/NYView"
                android:translationX="100dp"
                android:translationY="50dp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/NYflavorLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />
        <!--android:contentDescription="@string/flavorLabel"-->


        <RadioGroup
            android:id="@+id/NYsizeGroup"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/NYsmallSize"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="alterSize"
                android:text="@string/smallRadioLabel" />

            <RadioButton
                android:id="@+id/NYmediumSize"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="alterSize"
                android:text="@string/mediumRadioLabel" />

            <RadioButton
                android:id="@+id/NYlargeSize"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="alterSize"
                android:text="@string/largeRadioLabel" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="266dp"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/NYtoppingRecycler"
                android:layout_width="188dp"
                android:layout_height="257dp"
                android:background="@android:color/darker_gray"
                android:padding="4dp"
                android:scrollbars="vertical" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/NYaddedToppingRecycler"
                android:layout_width="match_parent"
                android:layout_height="257dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/NYcrustTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/NYpriceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/NYaddOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addToOrderButton"
            android:onClick="addToOrder"/>

        <Button
            android:id="@+id/NYbackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backButtonName"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>